@@ -37,6 +37,8 @@ endif()
 
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     add_compile_options(-Werror -Weverything)
+    # we do not care about padding
+    add_compile_options(-Wno-padded)
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     add_compile_options(-Werror -Wall -Wextra -Wformat=2 -Wshadow -Wcast-qual -Wwrite-strings -Wunreachable-code -Wpedantic -Wundef)
 endif()
@@ -64,20 +66,17 @@ if (CMAKE_CXX_COMPILER_ID MATCHES "MSVC")
     target_include_directories(common-static PRIVATE SYSTEM ${CMAKE_BINARY_DIR}/include)
 endif()
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(common-static PRIVATE -Wno-sign-conversion -Wno-padded)
+    target_compile_options(common-static PRIVATE -Wno-sign-conversion)
 endif()
 target_include_directories(common-static SYSTEM PRIVATE ${ZLIB_INCLUDE_DIR} ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
 
 add_library(config-static STATIC config.c)
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(config-static PRIVATE -Wno-padded)
-endif()
 target_include_directories(config-static SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
 
 add_executable(mame_regtest mame_regtest.c)
 target_include_directories(mame_regtest SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(mame_regtest PRIVATE -Wno-reserved-id-macro -Wno-padded)
+    target_compile_options(mame_regtest PRIVATE -Wno-reserved-id-macro)
 elseif (CMAKE_CXX_COMPILER_ID MATCHES "GNU")
     target_compile_options(mame_regtest PRIVATE -Wno-format-truncation)
 endif()
@@ -89,7 +88,7 @@ endif()
 add_executable(create_report create_report.c)
 target_include_directories(create_report SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
 if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(create_report PRIVATE -Wno-cast-qual -Wno-disabled-macro-expansion -Wno-double-promotion -Wno-padded)
+    target_compile_options(create_report PRIVATE -Wno-cast-qual -Wno-disabled-macro-expansion -Wno-double-promotion)
 endif()
 target_link_libraries(create_report PRIVATE Threads::Threads common-static config-static ${LIBXML2_LIBRARIES} ${ZLIB_LIBRARIES})
 if (WIN32)
@@ -98,9 +97,6 @@ endif()
 
 add_executable(create_image_xml create_image_xml.c)
 target_include_directories(create_image_xml SYSTEM PRIVATE ${LIBXML2_INCLUDE_DIR} ${Iconv_INCLUDE_DIR})
-if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    target_compile_options(create_image_xml PRIVATE -Wno-padded)
-endif()
 target_link_libraries(create_image_xml PRIVATE Threads::Threads common-static ${LIBXML2_LIBRARIES} ${ZLIB_LIBRARIES})
 if (WIN32)
     target_link_libraries(create_image_xml PRIVATE ws2_32)
